# mytakepic

./: CMakeLists.txt  README  README-func  bta_print.c  bta_print.h  bta_shdata.h  takepic.c  takepic.h  usage.c  usage.h
ebuilds/sci-astronomy/fli_control/: Manifest  fli_control-0.1.ebuild
ebuilds/sci-libs/fliusb/: Manifest  fliusb-1.3.ebuild
ebuilds/sci-libs/libfli/: Manifest  libfli-1.104.ebuild
fli_control/: CMakeLists.txt  FLI_control.config  FLI_control.files  README  README-func  cmdlnopts.c  cmdlnopts.h  flifunc.c  flifunc.h  imageview.c  imageview.h  main.c  main.h  usefull_macros.c
fli_control/locale/ru/: messages.po  ru.po  ru.po.bkp
fli_control/locale/ru/LC_MESSAGES/: fli_control.mo
locale/ru/: ru.po
locale/ru/LC_MESSAGES/: takepic.mo
